--- a/scripts/core/registry.yml
+++ b/scripts/core/registry.yml
@@ -529,6 +529,9 @@ etors:
 - name: ADAPTER_GET_INFO
   desc: Enumerator for $xAdapterGetInfo
   value: '181'
+- name: DEVICE_GET_SELECTED
+  desc: Enumerator for $xDeviceGetSelected
+  value: '182'
 ---
 type: enum
 desc: Defines structure types
